--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,17 +1,9 @@
 {
-    "files": [],
-    "references": [
-      {
-        "path": "./jsconfig.app.json"
-      },
-      {
-        "path": "./jsconfig.node.json"
-      }
-    ],
     "compilerOptions": {
       "baseUrl": ".",
       "paths": {
-        "@/*": ["./src/*"]
+        "@/*": ["./src/*"],
+        "@/components/*": ["./src/components/*"],
       }
     }
   }
