--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -4,6 +4,7 @@
       "paths": {
         "@/*": ["./src/*"],
         "@/components/*": ["./src/components/*"],
+        "@/ui/*": ["./src/components/ui/*"],
       }
     }
   }
