--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,8 @@
     "tailwindcss": "^3.4.6",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^5.3.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.19.0"
   }
 }
