--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-login-page": "^1.0.4",
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
