--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-login-page": "^1.0.4",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "three": "^0.167.0"
   },
   "devDependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.1",
