--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "axios": "^1.7.2",
+    "markerjs2": "^2.32.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-login-page": "^1.0.4",
