--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "axios": "^1.7.2",
+    "cropro": "^1.6.0",
     "markerjs2": "^2.32.1",
+    "panzoom": "^9.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-login-page": "^1.0.4",
@@ -39,6 +41,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "lucide-react": "^0.414.0",
+    "openseadragon": "^2.4.2",
+    "openseadragon-annotations": "^1.0.5",
     "postcss": "^8.4.39",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.6",
