fix: fetch using promises for data

--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "cropro": "^1.6.0",
     "markerjs2": "^2.32.1",
     "panzoom": "^9.4.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-login-page": "^1.0.4",
     "react-router-dom": "^6.25.1",
