refactor: re add code for mark js

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "cropro": "^1.6.0",
+    "fabric": "^6.0.2",
     "markerjs2": "^2.32.1",
     "panzoom": "^9.4.3",
     "react": "^18.3.1",
